# flagrant

./: .gitignore  ADR.org  Cargo.toml  README.md  README.org  bacon.toml
crates/flagrant/: Cargo.toml  build.rs
crates/flagrant-api/: Cargo.toml  bacon.toml
crates/flagrant-api/src/: api.rs  errors.rs  extractors.rs  lib.rs  main.rs  openapi.rs  routes.rs  tracing.rs
crates/flagrant-api/src/handlers/: environments.rs  features.rs  identities.rs  mod.rs  parsers.rs  projects.rs  segments.rs  tags.rs  traits.rs  variants.rs
crates/flagrant-bombardier/: Cargo.toml
crates/flagrant-bombardier/src/: main.rs
crates/flagrant-cli/: Cargo.toml
crates/flagrant-cli/src/: client.rs  command.rs  completer.rs  cookie.rs  errors.rs  index.rs  main.rs  repl.rs  tabular.rs
crates/flagrant-cli/src/handlers/: env.rs  environments.rs  feat.rs  features.rs  groups.rs  identities.rs  index.rs  mod.rs  projects.rs  rules.rs  segments.rs  var.rs  variants.rs
crates/flagrant-cli/src/handlers/internal/: effectives.rs  helpers.rs  index.rs  mod.rs  stage.rs  variants.rs
crates/flagrant-cli/src/printer/: tabular.rs
crates/flagrant-cli/src/printer/tabular/: environment.rs  feature.rs  identity.rs  mod.rs  segment.rs
crates/flagrant-cli/src/repl/: command.rs  completer.rs  context.rs  highlighter.rs  hinter.rs  mod.rs  multiline.rs  readline.rs  session.rs  tokenizer.rs
crates/flagrant-client/: Cargo.toml
crates/flagrant-client/src/: blocking.rs  connection.rs  http.rs  impl_async.rs  impl_blocking.rs  lib.rs  resource.rs  session.rs
crates/flagrant-client/src/blocking/: mod.rs
crates/flagrant-macros/: Cargo.toml
crates/flagrant-macros/src/: lib.rs
crates/flagrant-repl/: Cargo.toml
crates/flagrant-repl/src/: command.rs  completer.rs  hinter.rs  lib.rs  parser.rs  readline.rs  session.rs
crates/flagrant-types/: Cargo.toml
crates/flagrant-types/src/: compounds.rs  internals.rs  lib.rs  payload.rs  payloads.rs  tabular.rs
crates/flagrant/migrations/: 20240308124133_create_base_schema.sql  20260614180626_create_segments.sql  20260710145814_create_segment_variants.sql
crates/flagrant/resources/db/migrations/: V20240308124133__create_base_flagrant_schema.sql
crates/flagrant/resources/db/queries/: environments.sql  features.sql  identities.sql  projects.sql  segments.sql  tags.sql  traits.sql  variants.sql
crates/flagrant/src/: db.rs  distributor.rs  errors.rs  evaluator.rs  lib.rs
crates/flagrant/src/models/: environment.rs  feature.rs  identity.rs  mod.rs  project.rs  rule.rs  segment.rs  tag.rs  traits.rs  variant.rs
crates/flagrant/tests/: entities.rs  environments.rs  evaluator.rs  features.rs  identities.rs  segments.rs  tests.rs
crates/flagrant/tests/common/: mod.rs
src/: distributor.rs  lib.rs  main.rs
tests/: tests.rs
