[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Michal Buczko <michal@buczko.pl>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
axum-extra = {version = "0.9.1", features = ["typed-header"]}
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
sqlx = { version = "0.7.3", features = [ "sqlite", "macros", "time", "runtime-tokio-rustls" ]}
serde = "1.0"
serde_json = "1.0"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
anyhow = "1.0.80"
thiserror = "1.0.29"
reqwest = "0.11"
clap = "4.5.1"

[profile.release]
panic = "abort"
opt-level = 'z'  # Optimize for size.
codegen-units = 1
lto = true
strip = true
#strip = "debuginfo
