[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.0.2"
description = "CLI powered feature-flagging"
repository = "https://github.com/mbuczko/flagrant"
authors = ["Michal Buczko <michal@buczko.pl>"]
readme = "README.md"
keywords = ["feature-flags", "cli", "sqlite", "hugsql"]
categories = ["feature-flags", "cli"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
axum-extra = {version = "0.9.2", features = ["typed-header"]}
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
sqlx = { version = "0.7.4", features = [ "sqlite", "macros", "runtime-tokio-rustls" ]}
hugsqlx = {version = "0.3.0", features = ["sqlite"]}
serde = "1.0"
serde_json = "1.0"
serde_valid = "0.20.0"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
anyhow = "1.0.80"
thiserror = "1.0.29"
reqwest = "0.11"
clap = "4.5.1"

[profile.release]
panic = "abort"
opt-level = 'z'  # Optimize for size.
codegen-units = 1
lto = true
strip = true
#strip = "debuginfo
