[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.0.3"
description = "CLI powered feature-flagging"
repository = "https://github.com/mbuczko/flagrant"
authors = ["Michal Buczko <michal@buczko.pl>"]
readme = "README.md"
keywords = ["feature-flags", "cli", "sqlite", "hugsql"]
categories = ["feature-flags", "cli"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
axum = "0.7.7" 
axum-extra = {version = "0.9.2", features = ["typed-header"]}
tokio = {version = "1", features = ["full"]}
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
sqlx = {version = "0.8.6", features = [ "sqlite", "macros", "runtime-tokio-rustls", "migrate"]}
hugsqlx = {path = "../hugsqlx", features = ["sqlite"]}
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
tracing = "0.1.36"
tracing-log = "0.1.3"
serde = "1.0"
serde_json = "1.0"
serde_valid = "0.20.0"
anyhow = "1.0.80"
thiserror = "1.0.29"
reqwest = "0.11"
smallvec = "1.15.1"
rustyline = { version = "15.0.0", features = ["derive"], git = "https:/github.com/mbuczko/rustyline", branch = "feat/prompt-overlays" }

[profile.release]
panic = "abort"
lto = true
strip = true # "debuginfo"
opt-level = 'z'  # Optimize for size.
codegen-units = 1
