[package]
name = "flagrant-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flagrant = {path = "../flagrant"}
flagrant-types = {path = "../flagrant-types"}

tokio = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
sqlx = {workspace = true}
tower = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}

[dependencies.tower-http]
version = "*"
features = ["add-extension", "compression-full", "trace"]

[[bin]]
name = "flagrant-api"
