[package]
name = "flagrant-bombardier"
version.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
flagrant-types = {path = "../flagrant-types", version = "0.0.3"}
flagrant-client = {path = "../flagrant-client", version = "0.0.3", features = ["blocking"]}

anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
ulid = "1.1.2"
indicatif = "0.17.8"
rand = "0.8.5"
dashmap = "5.5.3"

[[bin]]
name = "flagrant-bombardier"
