[package]
name = "flagrant-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flagrant-types = {path = "../flagrant-types"}
flagrant-client = {path = "../flagrant-client"}

# common dependencies
serde = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true, features = ["json", "blocking"]}
rustyline = {version = "14.0.0", features = ["derive"]}

clap = "4.5.1"
itertools = "0.12.1"

[[bin]]
name = "flagrant-cli"
