[package]
name = "flagrant-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flagrant-types = {path = "../flagrant-types"}
flagrant-client = {path = "../flagrant-client"}

# common dependencies
serde = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true, features = ["json", "blocking"]}
rustyline = {version = "14.0.0", features = ["derive"]}
ascii_table = {version = "4.0.3", features = ["auto_table_width"]}

clap = "4.5.1"
strum = "0.26.2"
strum_macros = "0.26.2"

[[bin]]
name = "flagrant-cli"
