[package]
name = "flagrant-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flagrant-repl = {path = "../flagrant-repl"}
flagrant-types = {path = "../flagrant-types"}
flagrant-client = {path = "../flagrant-client", features = ["blocking"]}

# common dependencies
serde = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true, features = ["json", "blocking"]}
rustyline = { workspace = true }
fancy-table = {path = "../../../fancy-table"}
clap = "4.5.1"
strum = "0.26.2"
strum_macros = "0.26.2"
colored = "3.0.0"

[[bin]]
name = "flagrant-cli"
