[package]
name = "flagrant-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flagrant-types = {path = "../flagrant-types"}

# common dependencies
serde = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true, features = ["json", "blocking"]}
