[package]
name = "flagrant-types"
version.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
regex = {workspace = true}
chrono = {workspace = true}
utoipa = {workspace = true}
serde = {workspace = true}
serde_valid = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}

